--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>SeleniumFreameworkDesign</name>
+    <name>SeleniumFrameworkDesign</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -15,11 +15,13 @@
     </properties>
 
     <dependencies>
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.29.0</version>
         </dependency>
+
+
     </dependencies>
 </project>
