--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- for slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+
+
     </dependencies>
 </project>
